[package]
name = "cloc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { git = "https://github.com/iced-rs/iced.git",rev="3013463baa71504488a20436beb3db87ecb66df0",   features = [
    "canvas",
    "advanced",
    "tokio",
] }
# iced_aw = { version = "0.8.0", features = [
#     "modal",
# ] }
time = { version = "0.3.34", features = ["local-offset", "formatting", "macros"] }
